# dragonfly-wasm

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum
api/proto/: events.proto  plugin.proto
examples/plugins/block-logger/: Cargo.toml  Makefile
examples/plugins/block-logger/src/: lib.rs
internal/adapter/: adapter.go
internal/handler/: handler.go
internal/manager/: hostfuncs.go  loader.go  manager.go  storage.go
internal/runtime/: instance.go  pool.go  runtime.go
pkg/config/: config.go
pkg/events/: converter.go  dispatcher.go
pkg/host/: functions.go  serialization.go
pkg/plugin/: manifest.go  state.go
pkg/types/: errors.go  types.go
plugins/block-logger/: plugin.toml
