[package]
name = "block-logger-plugin"
version = "1.0.0"
edition = "2021"
authors = ["Example Author"]
description = "A block logging plugin for Dragonfly"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
